GH-762: Adapt Feign API to support Spring Boot 2